force-app/main/default/objects/One_Degree_Zipcode_Search__mdt/One_Degree_Zipcode_Search__mdt.object-meta.xml
<CustomObject>
    <description>This will store the zip codes along with latitude and longitude of the zip codes.</description>
    <label>One Degree Zipcode Search</label>
    <pluralLabel>One Degree Zipcodes Search</pluralLabel>
</CustomObject>