force-app/main/default/objects/One_Degree_Zipcode_Search__mdt/fields/lat__c.field-meta.xml
<CustomField>
    <fullName>lat__c</fullName>
    <description>DO NOT USE</description>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>lat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>