force-app/main/default/objects/One_Degree_Zipcode_Search__mdt/fields/long__c.field-meta.xml
<CustomField>
    <fullName>long__c</fullName>
    <description>Longitude of the zipcode.</description>
    <inlineHelpText>Longitude of the zipcode.</inlineHelpText>
    <label>long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>