force-app/main/default/objects/One_Degree_Zipcode_Search__mdt/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Store zipcode to search providers.</description>
    <inlineHelpText>Store zipcode to search providers.</inlineHelpText>
    <label>Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>